--- a/shu-thesis.tex
+++ b/shu-thesis.tex
@@ -1,3 +1,4 @@
+%! TEX program = xelatex
 % UTF-8 encoding
 % Compile with latex+dvipdfmx, pdflatex, xelatex or lualatex
 % pdflatex is recommanded
@@ -22,7 +23,8 @@ menucolor=black,
 letterpaper=true,
 breaklinks=true,
 bookmarks=true,
-colorlinks
+colorlinks,
+bookmarksnumbered=true
 ]{hyperref}
 \usepackage{bibentry}
 %====================================================
