update mac fonts warnings and NEED windows fonts first

--- a/shu-thesis.tex
+++ b/shu-thesis.tex
@@ -3,7 +3,7 @@
 % Compile with latex+dvipdfmx, pdflatex, xelatex or lualatex
 % pdflatex is recommanded
 % This template is released under BSD 2-Clause license.
-\documentclass[UTF8]{ctexart}
+\documentclass[UTF8, fontset=windows]{ctexart}
 %====================================================
 % 颜色和自定义颜色
 \usepackage{xcolor}
